--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "sass": "^1.71.1",
     "stripe": "^16.1.0",
     "styled-components": "^6.1.8",
+    "typed-redux-saga": "^1.5.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -56,6 +57,7 @@
     ]
   },
   "devDependencies": {
-    "@types/redux-logger": "^3.0.13"
+    "@types/redux-logger": "^3.0.13",
+    "babel-plugin-macros": "^3.1.0"
   }
 }
