--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/styled-components": "^5.1.34",
     "dotenv": "^16.4.5",
     "firebase": "^10.8.1",
     "react": "^18.2.0",
