--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@stripe/react-stripe-js": "^2.7.1",
     "@stripe/stripe-js": "^3.5.0",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.14.10",
@@ -24,6 +23,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.3.0",
+    "redux-saga-test-plan": "^4.0.6",
     "redux-thunk": "^3.1.0",
     "reselect": "^5.1.0",
     "sass": "^1.71.1",
@@ -58,7 +58,10 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.0.0",
     "@types/redux-logger": "^3.0.13",
-    "babel-plugin-macros": "^3.1.0"
+    "babel-plugin-macros": "^3.1.0",
+    "jest-styled-components": "^7.2.0"
   }
 }
